package com.kazurayam.inspectus.core;public class InspectusException {
}
