@startuml
abstract class "AbstractDiffService"
abstract class "AbstractService"
abstract class "ChronosDiff"
interface "Inspectus"
Inspectus : execute()
class "InspectusException"
class "Intermediates"
class "Parameters" {
  Path baseDir
  Store store
  JobName jobName
  JobTimestamp jobTimestamp
  SortKeys sortKeys
  Double threshold
}
abstract class "Shootings"
class "StdStepListener"
interface "StepListener"
abstract class "TwinsDiff"
class "FnShootings" {
  Parameters p
  void execute()
}
interface "ITestCaseCaller"
class "KatalonChronosDiff" {
  Parameters p
  void execute()
}
class "KatalonShootings" {
  Parameters p
  void execute()
}
class "KatalonTwinsDiff" {
  Parameters p
  void execute()
}
class "KeywordExecutor"

AbstractService ..|> Inspectus
AbstractDiffService --|> AbstractService
Shootings --|> AbstractService
FnShootings --|> Shootings
ChronosDiff --|> AbstractDiffService
TwinsDiff --|> AbstractDiffService
KatalonShootings --|> Shootings
KatalonChronosDiff --|> ChronosDiff
KatalonTwinsDiff --|> TwinsDiff
StdStepListener ..|> StepListener
ITestCaseCaller -- KeywordExecutor
KatalonChronosDiff ..|> ITestCaseCaller
KatalonTwinsDiff ..|> ITestCaseCaller
KatalonShootings ..|> ITestCaseCaller
FnShootings -- StdStepListener
KatalonChronosDiff -- StdStepListener
KatalonTwinsDiff -- StdStepListener
KatalonShootings -- StdStepListener
@enduml
